--- a/choquality/BuildGradle/build-springboot3.gradle
+++ b/choquality/BuildGradle/build-springboot3.gradle
@@ -14,6 +14,8 @@ dependencies {
     implementation 'nz.net.ultraq.thymeleaf:thymeleaf-layout-dialect'
     implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity6'
     implementation 'org.springframework.boot:spring-boot-starter-web'
+    implementation("org.hibernate.orm:hibernate-community-dialects")
+    runtimeOnly("org.xerial:sqlite-jdbc")
 }
 
 test {
