--- a/choquality/BuildProperties/dev/application.yml
+++ b/choquality/BuildProperties/dev/application.yml
@@ -1,1 +1,24 @@
-spring.application.name=choquality
+server:
+  servlet:
+    encoding:
+      charset: UTF-8
+  port: 9090
+  address: 0.0.0.0
+  url: http://localhost:9090
+spring:
+  application:
+    name: choquality
+  config:
+    import:
+      - datasource.yml
+      - jwt.yml
+  profiles:
+    active: local
+
+logging:
+  pattern:
+    console: '%d{YYYY-MM-dd HH:mm:ss} | %-5level | %C | %method | %msg %n'
+  level:
+    root: debug
+
+
